[project]
name = "telegram-notion-bot"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot==20.3",
    "requests",
    "Flask",
    "nest_asyncio",
    "dateparser",
    "SpeechRecognition",
    "pydub",
    "static-ffmpeg"
]

[tool.vercel]
entrypoint = "api.bot:app"
